--- a/css/admin.css
+++ b/css/admin.css
@@ -18,6 +18,7 @@
     --border-color: #594ef7;
     --table-tr-color: #eef0f3;
     --thead-bg-color: #f9fafB;
+    --orange: rgb(247, 89, 16);
 
 }
 
@@ -460,4 +461,161 @@ tbody tr td{
     width: 150px;
     height: 150px;
     border-radius: 50%;
+}
+
+
+/* Modal add and edit */
+/* Modal edit profile */
+.form-edit {
+    display: block;
+    padding: 15px 20px;
+    background: #fff;
+    border-radius: 15px;
+}
+
+.form-edit h5 {
+    font-size: 36px;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+.form-edit .form-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.form-edit .form-group label {
+    margin-bottom: 10px;
+    font-size: 17px;
+}
+
+.form-edit .form-group select,
+.form-edit .form-group input {
+    border: 2px solid rgb(111, 253, 106);
+    border-radius: 10px;
+    height: 45px;
+    font-size: 17px;
+    padding: 10px 15px;
+    outline: none;
+    background: #fff;
+}
+
+.form-edit .forgot-pwd {
+    text-align: end;
+    margin-bottom: 20px;
+}
+
+.form-edit .forgot-pwd a {
+    text-decoration: none;
+    color: #363232;
+    font-size: 16px;
+}
+
+.form-edit .forgot-pwd a:hover {
+    text-decoration: underline;
+}
+
+.form-edit .form-submit {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.form-edit .form-submit.solo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.form-edit .form-submit button.com-a,
+.form-edit .form-submit a{
+    /* width: 50%; */
+    padding: 10px 20px;
+    border: none;
+    background-color: var(--orange);
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.form-edit .form-submit button {
+    /* width: 50%; */
+    padding: 10px 20px;
+    border: none;
+    background-color: rgba(111, 253, 106, 0.616);
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: rgb(4, 73, 2);
+}
+
+.form-edit .form-submit button.solo {
+    width: 50%;
+    padding: 10px 20px;
+    border: none;
+    background-color: rgba(111, 253, 106, 0.616);
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: rgb(4, 73, 2);
+}
+
+.form-edit .signup-link {
+    text-align: center;
+}
+
+.form-edit .signup-link a {
+    color: rgb(16, 108, 245);
+    font-weight: 600;
+}
+
+.form-edit .user_pic {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.form-edit .user_pic img {
+    width: 150px;
+    height: 150px;
+    border: 2px solid rgba(16, 108, 245, 0.521);
+    padding: 5px;
+    border-radius: 50%;
+
+}
+
+.form-edit .user_pic label {
+    position: absolute;
+    font-size: 30px;
+    background-color: #ccc;
+    padding: 10px;
+    border-radius: 50%;
+    color: rgb(255, 254, 254);
+    opacity: .6;
+    /* bottom: -15px;
+    right: 150px; */
+}
+
+
+.form-edit .user_pic input {
+    display: none;
+}
+
+.btn-add-dest{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 40px;
+}
+
+.btn-add-dest button{
+    width: 30%;
+    padding: 10px 20px;
+    border: none;
+    background-color: rgba(111, 253, 106, 0.616);
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: rgb(4, 73, 2);
 }
