--- a/css/admin.css
+++ b/css/admin.css
@@ -441,20 +441,8 @@ tbody tr td{
     padding: 10px 20px;
     border-radius: 30px;
 }
-
-.my-profile .info-pers h6,
-.my-profile .info-pers h5,
-.my-profile .info-pers h4,
-.my-profile .info-pers h3,
-.my-profile .info-pers h2,
-.my-profile .info-pers h1{
-    text-align: center;
-}
-
-.my-profile .info-pers .user-profile .img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.my-profile .info-pers .user-profile{
+    padding: 20px;
 }
 
 .my-profile .info-pers .user-profile .img img{
@@ -463,6 +451,40 @@ tbody tr td{
     border-radius: 50%;
 }
 
+.my-profile .info-pers .user-profile .prof .prof-form{
+    display: flex;
+    margin-bottom: 25px;
+}
+
+.my-profile .info-pers .user-profile .prof .prof-form h5{
+    color: var(--orange-zoe);
+    font: 16px;
+    display: inline-block;
+}
+
+.my-profile .info-pers .user-profile .prof .prof-form span{
+    color: var(--text-h-color);
+    font: 14px;
+    margin-left: 10px;
+    display: inline-block;
+}
+
+.my-profile .info-pers .info-update{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.my-profile .info-pers .info-update button{
+    width: 30%;
+    padding: 10px 20px;
+    border: none;
+    background-color: rgba(111, 253, 106, 0.616);
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: rgb(4, 73, 2);
+}
 
 /* Modal add and edit */
 /* Modal edit profile */
