--- a/css/admin.css
+++ b/css/admin.css
@@ -616,10 +616,14 @@ tbody tr td{
     border-radius: 50%;
     color: rgb(255, 254, 254);
     opacity: .6;
+    cursor: pointer;
     /* bottom: -15px;
     right: 150px; */
 }
 
+.auth-a .content .form-auth .user_pic label.file{
+    opacity: .3;
+}
 
 .form-edit .user_pic input {
     display: none;
