--- a/css/style.css
+++ b/css/style.css
@@ -755,7 +755,7 @@ footer {
 }
 
 .auth-a .content .form-auth .form-group input {
-    border: 2px solid rgb(111, 253, 106);
+    border: 2px solid var(--green-text-2);
     border-radius: 10px;
     height: 45px;
     font-size: 17px;
@@ -788,10 +788,10 @@ footer {
     width: 50%;
     padding: 10px 20px;
     border: none;
-    background-color: rgba(111, 253, 106, 0.616);
+    background-color: var(--green-text-2);
     border-bottom-left-radius: 10px;
     border-top-right-radius: 10px;
-    color: rgb(4, 73, 2);
+    color: #fff;
 }
 
 .auth-a .content .form-auth .signup-link {
@@ -1040,7 +1040,7 @@ footer {
     display: block;
     width: 100%;
     font-size: 14px;
-    color: rgb(126, 245, 58);
+    color: var(--green-text-2);
 }
 
 .user-dash .user-profil .info .bottom-info .nbr-info span {
@@ -1064,7 +1064,7 @@ footer {
     border: none;
     outline: none;
     padding: 10px 10px;
-    background-color: rgb(91, 211, 22);
+    background-color: var(--green-text-2);
     color: #fff;
     font-size: 14px;
 }
